objects/TW1_Cupom__c.object
<CustomObject>
    <fields>
        <fullName>Numero__c</fullName>
        <label>Número</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sexo__c</fullName>
        <label>Sexo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Masculino</fullName>
                </value>
                <value>
                    <fullName>Feminino</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Bairro__c</fullName>
        <label>Bairro</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_CEP__c</fullName>
        <label>CEP</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_CPF__c</fullName>
        <label>CPF</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Celular__c</fullName>
        <label>Celular</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Certificado_Autenticao_Promocao__c</fullName>
        <label>Certificado de Autenticação da Promoção</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TW1_Cidade__c</fullName>
        <label>Cidade</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Complemento__c</fullName>
        <label>Complemento</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Data_Reimpressao__c</fullName>
        <label>Data Reimpressão</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_Data__c</fullName>
        <label>Data</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TW1_Data_de_Nascimento__c</fullName>
        <label>Data de Nascimento</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_Email__c</fullName>
        <label>E-mail</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Formas_de_Pagamento__c</fullName>
        <label>Formas de Pagamento</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dinheiro</fullName>
                </value>
                <value>
                    <fullName>Cartão Credito</fullName>
                </value>
                <value>
                    <fullName>Cartão Debito</fullName>
                </value>
                <value>
                    <fullName>Cartão Caixa</fullName>
                </value>
                <value>
                    <fullName>Cartão Caixa ELO</fullName>
                </value>
                <value>
                    <fullName>Visa Vale</fullName>
                </value>
                <value>
                    <fullName>VISA PLATINUM</fullName>
                </value>
                <value>
                    <fullName>VISA INFINITE</fullName>
                </value>
                <value>
                    <fullName>CLUBE RIO DESIGN</fullName>
                </value>
                <value>
                    <fullName>Dinheiro(FDS)</fullName>
                </value>
                <value>
                    <fullName>Cartão Débito(FDS)</fullName>
                </value>
                <value>
                    <fullName>Cartão Crédito(FDS)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Gerou_Reimpressao__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gerou Reimpressão</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TW1_Nome_Lojista__c</fullName>
        <label>Nome Lojista</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Nome_da_Loja__c</fullName>
        <label>Nome da Loja</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Nome_do_Cliente__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Nome do Cliente</label>
        
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cupons</relationshipLabel>
        <relationshipName>Cupons</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_Operador__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Operador</label>
        <referenceTo>TW1_Operador__c</referenceTo>
        <relationshipLabel>Cupons</relationshipLabel>
        <relationshipName>Cupons</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_Parametro_Promocao__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Promoção</label>
        <referenceTo>TW1_Parametros_Promocao__c</referenceTo>
        <relationshipLabel>Cupons</relationshipLabel>
        <relationshipName>Cupons</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_Pergunta__c</fullName>
        <label>Pergunta</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_RG__c</fullName>
        <label>RG</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Rua__c</fullName>
        <label>Rua</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Shopping_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shopping</label>
        <referenceTo>TW1_Shopping__c</referenceTo>
        <relationshipLabel>Cupons</relationshipLabel>
        <relationshipName>Cupons</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_Telefone__c</fullName>
        <label>Telefone</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_UF__c</fullName>
        <label>UF</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AC</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>AP</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>CE</fullName>
                </value>
                <value>
                    <fullName>DF</fullName>
                </value>
                <value>
                    <fullName>ES</fullName>
                </value>
                <value>
                    <fullName>GO</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MG</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>PA</fullName>
                </value>
                <value>
                    <fullName>PB</fullName>
                </value>
                <value>
                    <fullName>PE</fullName>
                </value>
                <value>
                    <fullName>PI</fullName>
                </value>
                <value>
                    <fullName>PR</fullName>
                </value>
                <value>
                    <fullName>RJ</fullName>
                </value>
                <value>
                    <fullName>RN</fullName>
                </value>
                <value>
                    <fullName>RO</fullName>
                </value>
                <value>
                    <fullName>RR</fullName>
                </value>
                <value>
                    <fullName>RS</fullName>
                </value>
                <value>
                    <fullName>SC</fullName>
                </value>
                <value>
                    <fullName>SE</fullName>
                </value>
                <value>
                    <fullName>SP</fullName>
                </value>
                <value>
                    <fullName>TO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Cupom</label>
    <nameField>
        <displayFormat>CUP-{0000000000}</displayFormat>
        <label>Número do Cupom</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cupons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>